--- a/05_gene_function.Rmd
+++ b/05_gene_function.Rmd
@@ -128,7 +128,7 @@ row_anno_data <- readxl::read_excel("raw_data/annotated_DEG_hm_ira.xlsx",na = "N
   mutate(Apoptosis = ifelse(!is.na(apoptosis),"A","FALSE")) %>% 
   mutate(Toxin = ifelse(!is.na(toxin),"T","FALSE")) %>% 
   mutate(GPCR = ifelse(!is.na(GPCR),"G","FALSE")) %>% 
-      select(cluster_id,Secreted,Immunity=Immunity_CellCell_Apoptosis,Toxin,Stress,log2FoldChange,evidence_level,StressType,display_name) %>% as.data.frame()
+      dplyr::select(cluster_id,Secreted,Immunity=Immunity,Toxin,Stress,Apoptosis,log2FoldChange,evidence_level,StressType,display_name) %>% as.data.frame()
 
 fanno_data <- row_anno_data %>% 
   arrange(log2FoldChange) %>% 
@@ -147,12 +147,13 @@ fanno_data %>%
   geom_violin(aes(fill=name)) +
   geom_point(size=3,color="black") + guides(fill=FALSE) +
   geom_point(data=fanno_data_toxins,size=3,color="blue") +
-  geom_label_repel(aes(label=display_name),size=5) +
+  geom_label_repel(aes(label=display_name),size=3) +
   coord_flip() +
   xlab("") + ylab("Relative Rank") +
-  theme_pubclean()
+  theme_pubclean() + theme(text = element_text(size=12))
 
-ggsave("figures/functions2.png",width = 6,height = 8)
+ggsave("figures/functions2.png",width = 85,height = 120, units = "mm", dpi = 300)
+ggsave("figures/functions2.pdf",width = 85,height = 120, units = "mm", dpi = 300)
 ```
 
 
